--- a/style.css
+++ b/style.css
@@ -26,3 +26,23 @@ body {
     gap: 100px;
     font-size: 24px;
 }
+
+#content {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+#picture {
+    width: 300px;
+    height: 300px;
+    background-color: black;
+}
+
+#text {
+    width: 500px;
+}
+
+.header {
+    text-align: center;
+}
